--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ header {
 
 .header-info {
     max-width: 708px;
+    margin-bottom: 147px;
 }
 
 .header-info h1 {
@@ -159,7 +160,7 @@ header {
 .form-section {
     background-image: url("./Flower Asset/Rectangle 9.png");
     background-repeat: no-repeat;
-    margin: 200px 125px;
+    margin: 200px 240px;
 }
 
 .form-container {
