--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header {
     font-size: 80px;
     font-style: normal;
     line-height: normal;
-    margin-bottom: 32px;
+    padding-bottom: 32px;
 }
 
 /* common style  */
